--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mydemo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kgh0.github.io/reactdemo",
   "dependencies": {
     "antd": "^3.25.0",
     "babel-plugin-import": "^1.12.2",
@@ -26,7 +27,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
